--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="press_btn_new_recording">Press the mic button <br/>to start the recording</string>
+    <string name="inputFilename">Enter filename...</string>
 </resources>
